Tests/Lexer_Parser_Tests/Fails/Function_Input1.bbgm
# Fail due to input variable missing name
recipe: HelloWorld(sugar) sugar {
    pop "hello"
}
